# Mobile-Robot

Final_HW/RRTstar/RRTstar/: .MATLABDriveTag  Bspline_settings.mat  Circle_trajectory.txt  First_ENV.mat  GoRobot.m  GoRobotICP.m  HW1_a.slx.r2020b  ICP_DIY.m  LaserCallback.m  Map.mlapp  PlotENV.m  PlotResult_offline.m  Publish_callback_fn.m  RRTstarDIY_fn.m  RRTstarDIY_fn_with_saftery_distance.m  Scan2Env.m  TreeOperationExample.m  bspline_demo.m  bspline_interpo.m  bspline_interpo_constraint.m  bsplineconstrainttesting.m  comparison_results.mat  construct_map.m  downsampleENV.mat  generating_validation_trajectory.m  generating_validation_trajectory_circle.m  generating_validation_trajectory_straight.m  interpo_testing.m  (+28 more)
MecanumWMR/: CMakeLists.txt  MPU9250.cpp  MPU9250.h  MPU9250RegisterMap.h  MecanumWMR.cpp  MecanumWMR.h  PID_CONTROLLER_IMPLEMENTATION.md  QuaternionFilter.h  TrajectoryGenerator.cpp  TrajectoryGenerator.h  i2c_master.cpp  i2c_master.h  main.cpp
datas/Final_values_Overshoot_and_Kd/: All_processed_values_2_sheets.xlsx
datas/Processed notebook datas/: All_processed_values.xlsx
datas/records/: File_to_edit_to_turn_into_csv.txt  File_to_edit_to_turn_into_csv_processed.csv  kp=0.25, ki=0.25, kb=0.25 q1.csv  kp=1.5, ki=0.05, kb=0.25 q1.csv  kp=1.5, ki=0.25, kb=0.25 q1_processed.csv  kp=3, ki=0.25, kd=0, kb=0.25 q1  max jerk 2.5 max acc 0.25 max vel 0.25 q2.txt  max jerk 2.5 max acc 0.5 max vel 1 q2.txt  overshoot kp8 ki1.25.txt  process_data.py  tom_0_5_processed.csv  tom_0_6_processed.csv  tom_1_2.txt  tom_1_2_7.txt  tom_1_2_processed.csv  tom_8_1_2.txt
(+38 files in other folders)
